--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,14 @@
 services:
   - type: web
     name: yoobumorph-api
-    env: python
+    runtime: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn src.fastapi_app:app --host 0.0.0.0 --port $PORT
+    healthCheckPath: /health
     envVars:
       - key: AZURE_CONNECTION_STRING
         sync: false
       - key: AZURE_CONTAINER_NAME
         value: processed-images
-    # Auto-deploy on push to main branch
     autoDeploy: true
